// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieNode component circular mode set correctly 1`] = `
<g
  transform="rotate(-90)translate(0)"
>
  <path
    d="M1.8369701987210297e-16,-3A3,3,0,1,1,-1.8369701987210297e-16,3A3,3,0,1,1,1.8369701987210297e-16,-3Z"
    fill="green"
  >
    <title>
      value 1 : 10
    </title>
     
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </path>
</g>
`;

exports[`PieNode component data set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <path
    d="M1.8369701987210297e-16,-3A3,3,0,1,1,-1.8369701987210297e-16,3A3,3,0,1,1,1.8369701987210297e-16,-3Z"
    fill="green"
  >
    <title>
      value 1 : 10
    </title>
     
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </path>
</g>
`;

exports[`PieNode component does not render if no data 1`] = `<!---->`;

exports[`PieNode component size set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <path
    d="M3.061616997868383e-17,-0.5A0.5,0.5,0,1,1,-3.061616997868383e-17,0.5A0.5,0.5,0,1,1,3.061616997868383e-17,-0.5Z"
    fill="green"
  >
    <title>
      value 1 : 10
    </title>
     
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </path>
</g>
`;

exports[`PieNode component x set correctly 1`] = `
<g
  transform="translate(0 1)"
>
  <path
    d="M1.8369701987210297e-16,-3A3,3,0,1,1,-1.8369701987210297e-16,3A3,3,0,1,1,1.8369701987210297e-16,-3Z"
    fill="green"
  >
    <title>
      value 1 : 10
    </title>
     
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </path>
</g>
`;

exports[`PieNode component y set correctly 1`] = `
<g
  transform="translate(1 0)"
>
  <path
    d="M1.8369701987210297e-16,-3A3,3,0,1,1,-1.8369701987210297e-16,3A3,3,0,1,1,1.8369701987210297e-16,-3Z"
    fill="green"
  >
    <title>
      value 1 : 10
    </title>
     
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </path>
</g>
`;
